[FIX] sap.m.DynamicPage: blank space on snap is no longer visible
SNOW: CS20240008271748
CR-Id: 002075125800001015702025
(cherry picked from commit e2b4b7eb4958438b00ff3648092a891166b9b537)

--- a/src/sap.f/src/sap/f/themes/base/DynamicPage.less
+++ b/src/sap.f/src/sap/f/themes/base/DynamicPage.less
@@ -413,3 +413,7 @@ To be used in Comparison pattern scenario. */
 .sapUiComparisonContainer .sapFDynamicPageTitleSnapped + .sapFDynamicPageContentWrapper .sapUiComparisonContent  {
 	margin-right: -1rem;
 }
+
+.sapFDynamicPageTitleWrapper.sapFDynamicPageTitleSnapped + .sapFDynamicPageContentWrapper > .sapFDynamicPageHeaderWrapper {
+	background: @sapUiObjectHeaderBackground;
+}
